<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AcuPick</string>
    <string name="ok">OK</string>
    <string name="login_id_hint">Employee ID/Username</string>
    <string name="login_id_accessibility">Employee ID or Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_password_accessibility">Password</string>
    <string name="login_button">Sign In</string>
    <string name="user_name_error">The username entered doesn\'t match our records.</string>
    <string name="password_error">The password entered doesn\'t match our records.</string>
    <string name="incorrect_credentials_error">Incorrect credentials</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Sign Out</string>
    <string name="logout_confirmation">Are you sure you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="offline_logout_warning_title">Offline Alert</string>
    <string name="offline_logout_warning_body">You are currently offline. Connect to Wi-Fi to sign out (optional).</string>
    <string name="offline_logout_warning_sign_out">Sign Out Anyway</string>
    <string name="reset">Reset</string>
    <string name="start_test">Start Test</string>
    <string name="auth_url_hint">Auth URL</string>
    <string name="aps_url_hint">(APS) URL</string>
    <string name="oscc_url_hint">OSCC URL</string>
    <string name="item_processor_url_hint">Item Processor URL</string>
    <string name="image_url_hint">Image URL</string>
    <string name="test_failure">Test Failure</string>
    <string name="test_success">Test success!</string>
    <string name="build_version">Version %s%s</string>
    <string name="device_id">Device ID %s</string>
    <string name="dev_options_button">Dev Options</string>
    <string name="app_restart_button">Restart</string>
    <string name="hello_associate_name">"Hello, %s"</string>
    <string name="hello_again_next_pick">"Hello again!  Here’s your next pick%s."</string>
    <string name="hello_again_flash">"Hello again! Please start this Flash order."</string>
    <string name="hello_continue_pick">Please continue your current task!</string>
    <string name="here_is_your_next_pick">Here\'s your next pick!</string>
    <string name="there_is_no_task_right_now">There\'s no task for you right now!</string>
    <string name="we_are_still_loading_the_order">We are still loading the order</string>
    <string name="we_are_loading_the_order">We are loading the order ...</string>
    <string name="just_a_few_more_seconds">Just a few more seconds ...</string>
    <string name="there_are_no_orders_available_at_this_time">There are no orders available at this time. </string>
    <string name="continue_staging_order">Next, let\'s start staging your order.</string>
    <string name="here_is_your_next_task">Here’s your next task!</string>
    <string name="customer_is_here_for_the_order">Your customer\'s here for their order!</string>
    <string name="deliver">DEL</string>
    <string name="continue_picking">Continue Picking</string>
    <string name="continue_picking_home_cta">Continue picking</string>
    <string name="stage_order">Stage Order</string>
    <string name="start_staging">Start staging</string>
    <string name="start_picking">Start picking</string>
    <string name="dug">DUG\u0020</string>
    <string name="wine_shipping">SHP</string>
    <string name="threepl">3PL\u0020</string>
    <string name="onePl">FLEET</string>
    <string name="one_pl_van_number">1PL %s\u0020</string>
    <plurals name="one_pl_collect_gift_notes_title">
        <item quantity="one">Collect %s gift note</item>
        <item quantity="other">Collect %s gift notes</item>
    </plurals>
    <string name="one_pl_gift_note_body">Attach gift notes to the matching orders before handoff</string>
    <string name="one_pl_gift_note_secondary_body">To re-print or view gift notes please check the web dashboard</string>
    <plurals name="one_pl_print_gift_notes_cta">
        <item quantity="one">Print %s Gift Note</item>
        <item quantity="other">Print %s Gift Notes</item>
    </plurals>
    <string name="partnerpick_order">Partner pick</string>
    <string name="all_order">All</string>
    <string name="flash_order">Flash</string>
    <string name="express_order">Express</string>
    <string name="standard_order">Standard</string>
    <plurals name="number_of_order_plural">
        <item quantity="one">%s Order</item>
        <item quantity="other">%s Orders</item>
    </plurals>
    <plurals name="cap_items_plural">
        <item quantity="one">%s Item</item>
        <item quantity="other">%s Items</item>
    </plurals>
    <string name="reshop">Reshop</string>
    <plurals name="prep_not_ready">
        <item quantity="one">%s item marked as “Prep not ready”</item>
        <item quantity="other">%s items marked as “Prep not ready”</item>
    </plurals>
    <string name="home_begin_handoff">Begin handoff</string>
    <string name="home_arriving_in">Arriving in</string>
    <string name="home_on_their_way">On their way</string>
    <string name="home_customer_waiting">"Hi there!  A customer is waiting."</string>
    <string name="home_customer_waiting_format">%1$s has arrived!</string>
    <string name="home_customer_arriving_format">%1$s is close by!</string>
    <string name="home_arrived_and_waiting">Arrived <b>and</b> Waiting</string>
    <string name="order_number_value">Order #%s</string>
    <string name="remove_unwanted_items_by">Remove unwanted items by</string>
    <string name="number_unwanted_items">%s unwanted items</string>
    <string name="store_format">Store #%1$s</string>
    <string name="shipping_order_warning">Shipping Order Warning</string>
    <string name="shipping_order_warning_body">This is your final chance to pick as this is a shipping order. Would you still like to mark this item as out of stock?</string>
    <string name="in_progress_orders">In Progress</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="search_button">Search Button</string>
    <string name="pickup_ready_order_unavailable">There are no pickup ready orders available at this time.</string>
    <string name="one_pl_pickup_ready_order_unavailable">There are no 1PL orders ready for handoff at this time. </string>
    <string name="in_progress_order_unavailable">There are no in progress orders available at this time.</string>
    <string name="one_pl_in_progress_order_unavailable">There are no 1PL in-progress orders available at this time.</string>
    <string name="or_search_by">Or search by</string>
    <string name="clear_all">Clear All</string>
    <string name="clear">Clear</string>
    <string name="destaging_dialog_title">Walk out customer\'s order</string>
    <string name="destaging_dialog_body">Your <b>DUG</b> customer has arrived, so please head out to the parking lot and handoff their groceries.</string>
    <string name="complete_destaging">Complete de-staging</string>
    <plurals name="rejected_items_plural">
        <item quantity="one">%d unwanted Item</item>
        <item quantity="other">%d unwanted Items</item>
    </plurals>
    <plurals name="rejected_1pl_items_plural">
        <item quantity="one">Unwanted item (%d)</item>
        <item quantity="other">Unwanted items (%d)</item>
    </plurals>
    <string name="rejected_ambient_items">Unwanted ambient items</string>
    <string name="rejected_hot_items">Unwanted hot items</string>
    <string name="rejected_frozen_items">Unwanted frozen items</string>
    <string name="rejected_chilled_items">Unwanted chilled items</string>
    <string name="remove_items_body">%s has %s unwanted items in %s zone. Please continue to remove these items.</string>
    <string name="info_snack_orders_allowed_for_batch_handoff">Only %s orders allowed for batch hand off.</string>
    <string name="arrival_status_arrived">Arrived</string>
    <string name="arrival_status_on_their_way">On their way</string>
    <string name="arrival_status_arriving_in_time">Arriving in %s min</string>
    <string name="arrival_option_mark_as_not_here">Mark as not here</string>
    <string name="arriving_in_min">Arriving in %s min</string>
    <string name="is_less_than_one_minute_away">Is less than 1 min away</string>
    <string name="no_rejected_items">No rejected items</string>
    <string name="please_complete_handoff_to_proceed">Please complete handoff to proceed</string>
    <string name="rejected_item_complete_handoff_cta">Complete handoff</string>
    <string name="unwanted_items_count">unwanted items(%s)</string>
    <string name="no_orders_found">No Orders Found</string>
    <string name="order_number_hint">Order #</string>
    <string name="next_button">Next Button</string>
    <string name="details">Details</string>
    <string name="search_order_text_header">ORDER: </string>
    <string name="order_number_format">Order: %s</string>
    <string name="status_format">Status: %s</string>
    <string name="customer_name_format">Customer Name: %s</string>
    <string name="pickup_ready">Pick-Up Ready</string>
    <string name="stage_by_format">Stage By: %s</string>
    <string name="tote_number_format">Tote Number: %s</string>
    <string name="staging_area_format">Staging Area: %s</string>
    <string name="searched_params_format"> for %s</string>
    <string name="not_found_format">"%s" not found</string>
    <string name="pick_window_format">%s-%s</string>
    <string name="customer_arrived_format">Arrived (%d)</string>
    <string name="customer_arriving_format">Arriving (%d)</string>
    <string name="customer_en_route_format">En Route (%d)</string>
    <string name="customer_pickup_ready_format">Pick-Up Ready (%d)</string>
    <string name="picker_name_unclaimed">NOT STARTED</string>
    <string name="handoff_cta">Begin handoff</string>
    <string name="takeover_handoff_cta">Takeover handoff</string>
    <string name="non_arrived_handoff_warning">You cannot begin this handoff until the customer has arrived.</string>
    <string name="non_arrived_handoff_cta">MARK AS ARRIVED</string>
    <string name="swipe_make_arrived_cta">Arrived</string>
    <string name="swipe_make_non_arrived_cta">Not here</string>
    <string name="status_pill_in_progress">in-progress</string>
    <string name="continue_cta">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="got_it">Got it</string>
    <string name="interstitial_reconnect_wifi">Reconnecting to Wifi...</string>
    <string name="id_verification_body_dug">Please compare and verify that the\n photo ID matches the pickup person.</string>
    <string name="age_verification">Age verification</string>
    <string name="items_removed">Items removed</string>
    <string name="title_handoff">Handoff\ncompleted!</string>
    <string name="number_of_orders">Number of orders</string>
    <string name="title_misplaced_items">Misplaced items</string>
    <string name="one_pl_arrivals">1PL Arrivals</string>
    <string name="one_pl_remove_items_info">Please remove unwanted items before truck departure.</string>
    <string name="net_weight_tool_tip_body">Enter net weight or count listed on the label</string>
    <string name="net_weight_tool_tip_image_content_description">fixed item tool tip image</string>
    <string name="net_weight_tool_tip_secondary_text">General Net Wt./Ct location on the printed label</string>
    <string name="back_to_home">Back to home</string>
    <string name="hand_off_in_under_5_minutes">Hand off in under 5 minutes</string>
    <string name="lbl_hand_off_timer_show_case">More on-time handoffs = higher OTH = more points tomorrow!</string>
</resources>