<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.albertsons.acupick.ui.dialog.CustomDialogViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_coener_dialog_background"
        android:minWidth="311dp"
        android:paddingHorizontal="24dp"
        android:paddingBottom="32dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            style="@style/PopinsMedium20.DarkBrown"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/one_pl_arrivals"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/illustrationImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_one_pl_truck"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/body"
            style="@style/NunitoSansRegular16.Grey700"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/one_pl_remove_items_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/illustrationImage" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continueButton"
            style="@style/ButtonPrimary"
            android:layout_width="264dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_corner_lighter_green"
            android:gravity="center"
            android:onClick="@{() -> viewModel.onPositiveButtonClick()}"
            android:text="@string/continue_cta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/NunitoSansSemiBold16.cattBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="@{() -> viewModel.onNegativeButtonClick()}"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/continueButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>