<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewData"
            type="com.albertsons.acupick.ui.dialog.CustomDialogViewData" />

        <variable
            name="viewModel"
            type="com.albertsons.acupick.ui.dialog.CustomDialogViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_coener_dialog_background"
        android:minWidth="311dp"
        android:paddingHorizontal="24dp"
        android:paddingBottom="32dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            style="@style/PopinsMedium20.DarkBrown"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@{viewData.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/age_verification" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/illustrationImage"
            visibilityGoneIfNull="@{viewData.largeImage}"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitCenter"
            app:imageResource="@{viewData.largeImage}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:src="@drawable/ic_fullfillment_dug" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/body"
            style="@style/NunitoSansRegular16.Grey700"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@{viewData.body}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/illustrationImage"
            tools:text="@string/id_verification_body_dug" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continueButton"
            style="@style/ButtonPrimary"
            android:layout_width="264dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_corner_lighter_green"
            android:gravity="center"
            android:onClick="@{() -> viewModel.onPositiveButtonClick()}"
            android:text="@{viewData.positiveButtonText}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body"
            tools:text="@string/continue_cta" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/NunitoSansSemiBold16.cattBlue"
            visibilityGoneIfNull="@{viewData.negativeButtonText}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="@{() -> viewModel.onNegativeButtonClick()}"
            android:text="@{viewData.negativeButtonText}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/continueButton"
            tools:text="@string/cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>