<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.albertsons.acupick.ui.arrivals.destage.removeitems.HandOff1PLViewModel" />

        <variable
            name="orderCount"
            type="Integer" />

        <variable
            name="removedCount"
            type="Integer" />

        <variable
            name="misplacedCount"
            type="Integer" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_title"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="24dp"
        android:src="@drawable/ic_1pl_handoff" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        style="@style/PopinsBold28.DarkBrown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="-8sp"
        android:text="@string/title_handoff"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_title"
         />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailsCL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/coffeeLighter"
        android:paddingHorizontal="16dp"
        android:paddingBottom="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        >


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_numberOfOrders"
            style="@style/NunitoSansRegular16.Grey700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/number_of_orders"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/numberOfOrders"
            style="@style/NunitoSansRegular16.Grey700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{orderCount.toString()}"
            app:layout_constraintBottom_toBottomOf="@+id/title_numberOfOrders"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/title_numberOfOrders"
            tools:text="15" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_items_removed"
                style="@style/NunitoSansRegular16.Grey700"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/items_removed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_numberOfOrders"
                />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/itemsRemoved"
            style="@style/NunitoSansRegular16.Grey700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{removedCount.toString()}"
            app:layout_constraintBottom_toBottomOf="@+id/title_items_removed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/title_items_removed"
            tools:text="11" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_misplacedItems"
                style="@style/NunitoSansRegular16.Grey700"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/title_misplaced_items"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_items_removed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/misplacedItems"
            style="@style/NunitoSansRegular16.Grey700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/title_misplacedItems"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title_misplacedItems"
            android:text="@{misplacedCount.toString()}"
            tools:text="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/troubleMessage"
        style="@style/NunitoSansSemiBoldItalic20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="88dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/interstitial_reconnect_wifi"
        app:layout_constraintTop_toBottomOf="@+id/detailsCL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:visibilityGoneIfFalse="@{viewModel.isShowingTroubleMessage}"
        />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/completeButton"
            style="@style/ButtonPrimary"
            android:layout_width="264dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            app:visibilityGoneIfFalse="@{viewModel.showBackToHomeButton}"
            android:onClick="@{()-> viewModel.navigateToHomeScreen()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/back_to_home" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>