<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/showcaseContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_transparent"
    android:clickable="true"
    android:layout_marginTop="20dp"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/tooltipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:elevation="8dp">

        <!-- Top Arrow -->
        <ImageView
            android:id="@+id/tooltipArrow"
            android:layout_width="20dp"
            android:layout_height="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/triangle_up"
            android:scaleType="fitXY"
            android:layout_marginBottom="-1dp" />

        <!-- Tooltip Container -->
        <LinearLayout
            android:id="@+id/tooltipContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_tooltip_card"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/icon_container" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/hand_off_in_under_5_minutes"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    style="@style/NunitoSansBold.34" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:text="@string/lbl_hand_off_timer_show_case"
                android:textColor="@color/black"
                android:textSize="14sp"
                style="@style/NunitoSansRegular10" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGotIt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/bg_got_it_button"
                android:minHeight="36dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/got_it"
                android:textAllCaps="false"
                android:textColor="@color/cta_got_it" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
